[gd_scene load_steps=4 format=2]

[ext_resource path="res://space.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.8486, 49.9036 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Panel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/Area2D"]
visible = false
position = Vector2( 49.9245, 49.6071 )
shape = SubResource( 1 )

[node name="hover" type="ColorRect" parent="Panel/Area2D"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
color = Color( 1, 1, 1, 0.482353 )

[node name="red" type="ColorRect" parent="Panel/Area2D"]
visible = false
margin_right = 101.0
margin_bottom = 100.0
color = Color( 0.972549, 0.690196, 0.894118, 1 )

[node name="blue" type="ColorRect" parent="Panel/Area2D"]
visible = false
margin_right = 101.0
margin_bottom = 100.0
color = Color( 0.603922, 0.909804, 0.878431, 1 )
[connection signal="input_event" from="Panel/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Panel/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Area2D" to="." method="_on_Area2D_mouse_exited"]
